--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,10 @@
 declared-services:
-  dialog-service-standard:
+  dialog-service:
     label: dialog
     plan: standard
 applications:
 - services:
-  - dialog-service-standard
+  - dialog-service
   name: dialog-tool
   command: node app.js
   path: .
