--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "~1.12.3",
     "errorhandler": "~1.3.2",
     "express": "~4.12.3",
+    "http-auth": "~2.2.8",
     "jade": "~1.9.1",
     "request": "~2.55.0"
   },
