--- a/manifest.yml
+++ b/manifest.yml
@@ -6,6 +6,6 @@ applications:
 - services:
   - dialog-service
   name: dialog-tool
-  command: node app.js
+  command: npm start
   path: .
   memory: 512M
