--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "DialogTool",
-  "version": "0.1.1",
+  "version": "0.6.1",
   "description": "Dialog app to create/edit dialog files",
   "dependencies": {
-    "http-auth": "~2.3.3",
-    "body-parser": "~1.14.1",
-    "errorhandler": "~1.4.2",
-    "express": "~4.13.3",
-    "jade": "~1.11.0",
-    "request": "~2.72.0"
+    "express": "~4.13.4",
+    "http-auth": "~2.4.0",
+    "pug": "^2.0.0-beta3",
+    "request": "~2.72.0",
+    "vcap_services": "^0.2.0"
+  },
+  "devDependencies": {
+    "codecov": "^1.0.1",
+    "istanbul": "^0.4.2",
+    "jshint": "^2.9.1",
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0"
   },
   "engines": {
-    "node": ">=0.10.38"
+    "node": ">=4.0"
   },
   "repository": {
     "type": "git",
@@ -29,6 +35,9 @@
     "url": "https://github.com/watson-developer-cloud/dialog-tool/issues"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js",
+    "test": "npm run jshint && (npm run codecov || true)",
+    "jshint": "jshint",
+    "codecov": "istanbul cover ./node_modules/mocha/bin/_mocha && codecov"
   }
 }
