--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,16 @@ env:
   - CF_API=https://api.ng.bluemix.net
   - CF_ORGANIZATION=WatsonPlatformServices
   - CF_SPACE=demos
-before_deploy: npm install -g cf-blue-green
 deploy:
-  provider: script
-  script:
-    - cf-blue-green-travis
+  provider: cloudfoundry
+  api: https://api.ng.bluemix.net
+  username: $CF_USERNAME
+  password: $CF_PASSWORD
+  organization: WatsonPlatformServices
+  space: demos
   on:
-    branch: master
     repo: watson-developer-cloud/dialog-tool
+    branch: master
   skip_cleanup: true
 notifications:
   email: false
